@@ -69,7 +69,6 @@ import(Rcpp)
 import(RcppArmadillo)
 import(ggplot2)
 import(parallel)
-import(pcaPP)
 import(perry)
 import(robustbase)
 import(stats)
